5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1793_1602.log
== SUBMITION (2019-05-30 18:34:17) 
-- CODE:
from numpy import*
primeiro_vetor= 
-- EXECUTION TIME:
0.180435
-- ERROR:
  File "/home/codebench/codes/1793/1602/main.py", line 2
    primeiro_vetor= 
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:19) 
-- CODE:
from numpy import*
primeiro_vetor= 
-- EXECUTION TIME:
0.159651
-- ERROR:
  File "/home/codebench/codes/1793/1602/main.py", line 2
    primeiro_vetor= 
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:19) 
-- CODE:
from numpy import*
primeiro_vetor= 
-- EXECUTION TIME:
0.135895
-- ERROR:
  File "/home/codebench/codes/1793/1602/main.py", line 2
    primeiro_vetor= 
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:20) 
-- CODE:
from numpy import*
primeiro_vetor= 
-- EXECUTION TIME:
0.183718
-- ERROR:
  File "/home/codebench/codes/1793/1602/main.py", line 2
    primeiro_vetor= 
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:20) 
-- CODE:
from numpy import*
primeiro_vetor= 
-- EXECUTION TIME:
0.154139
-- ERROR:
  File "/home/codebench/codes/1793/1602/main.py", line 2
    primeiro_vetor= 
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:20) 
-- CODE:
from numpy import*
primeiro_vetor= 
-- EXECUTION TIME:
0.236238
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1602/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
